--- a/application/views/admin/public/header.html
+++ b/application/views/admin/public/header.html
@@ -31,10 +31,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/admin/index/index">管理平台</a></li>
-        <!-- <li><a href="javascript:;" target="_blank">功能介绍</a></li>
-        <li><a href="javascript:;" target="_blank">使用指南</a></li>
-        <li><a href="javascript:;" target="_blank">帮助中心</a></li>
-        <li><a href="<{:U('System/index')}>">系统设置</a></li> -->
+        <li><a href="/" target="_blank">网站首页</a></li>
       </ul>
       
        <ul class="nav navbar-nav navbar-right">
