兼容移动端图片展示

--- a/application/views/admin/public/header.html
+++ b/application/views/admin/public/header.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/admin/index/index">管理平台</a></li>
-        <li><a href="/" target="_blank">网站首页</a></li>
+        <li><a href="http://{%HTTP_HOST%}" target="_blank">网站首页</a></li>
       </ul>
       
        <ul class="nav navbar-nav navbar-right">
