--- a/application/views/public/header.html
+++ b/application/views/public/header.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="{%PUBLIC_CSS%}/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="{%PUBLIC_CSS%}/home.css" />
 <link rel="stylesheet" type="text/css" href="{%PUBLIC_CSS%}/style-responsive.css" />
-<link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_382240_d6xu3hya3vxi529.css" />
+<link rel="stylesheet" type="text/css" href="{%PUBLIC_CSS%}/font_382240_d6xu3hya3vxi529.css" />
 <link rel="shortcut icon" type="image/png" href="{%PUBLIC_IMAGES%}/favicon.ico" sizes="16x16">
 <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
 </head>
