--- a/application/views/public/footer.html
+++ b/application/views/public/footer.html
@@ -44,7 +44,7 @@
         initContent();
     });
 </script>
-
+<script type="text/javascript" src="https://hm.baidu.com/hm.js?23c10c64dcfa7d3476eae78cba7817ed"></script>
 </div>
 </body>
 </html>
