--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1504,7 +1504,7 @@ ol.blog_list li img{
     }
 }
 
-.weibo{
-    
-    background: url("../images/weibo.png");
+.changyan{
+    width: 98%;
+    margin: 10px 0 0 10px;
 }
