--- a/application/views/about/index.html
+++ b/application/views/about/index.html
@@ -1,9 +1,21 @@
 {%include file='public/header.html' title='关于作者-谢大年的博客'%}
 {%include file='public/menu.html'%}
-
     <div class="about_con">
-       <p> 少年不识愁滋味，爱上层楼。爱上层楼。为赋新词强说愁。
-           而今识尽愁滋味，欲说还休。欲说还休。却道天凉好个秋。
-       </p>
+        <p>备案：京ICP备14032369号-2</p>
+        <p>联系邮箱：jinxiang_gz@163.com</p>
+        <p>PHP技术讨论兼职群：62302528</p>
+        <p>个人QQ：772325915</p>
+        <p>个人承接-企业网站开发-商城开发-微信开发-微信公众号开发-APP开发-APP封包-技术难点解决</p>
     </div>
+<div class="changyan">
+    <div id="SOHUCS" sid="about"></div>
+</div>
+<script type="text/javascript">
+    (function(){
+        var appid = 'cytH9dJDa';
+        var conf = 'prod_2edd172e861f49b7b6a3bae3e8ca01d1';
+        var width = window.innerWidth || document.documentElement.clientWidth;
+        if (width < 960) {
+            window.document.write('<script id="changyan_mobile_js" charset="utf-8" type="text/javascript" src="http://changyan.sohu.com/upload/mobile/wap-js/changyan_mobile.js?client_id=' + appid + '&conf=' + conf + '"><\/script>'); } else { var loadJs=function(d,a){var c=document.getElementsByTagName("head")[0]||document.head||document.documentElement;var b=document.createElement("script");b.setAttribute("type","text/javascript");b.setAttribute("charset","UTF-8");b.setAttribute("src",d);if(typeof a==="function"){if(window.attachEvent){b.onreadystatechange=function(){var e=b.readyState;if(e==="loaded"||e==="complete"){b.onreadystatechange=null;a()}}}else{b.onload=a}}c.appendChild(b)};loadJs("http://changyan.sohu.com/upload/changyan.js",function(){window.changyan.api.config({appid:appid,conf:conf})}); } })();
+</script>
 {%include file='public/footer.html'%}
