--- a/application/views/public/header.html
+++ b/application/views/public/header.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="baidu-site-verification" content="F9F6ZuigS3" />
 <title>{%$title|default:'谢大年的博客'%}</title>
 <meta name="keywords" content="javascript,node,jquery,git,python,java,sql,linux,ios,android,教程,软件,编程,开发,运维,云计算,网络,互联网" />
 <meta name="description" content="{%$title|default:''%}" />
