--- a/application/views/public/menu.html
+++ b/application/views/public/menu.html
@@ -24,7 +24,7 @@
         </ul>
         <p class="tc bt_link">
             <a href="http://weibo.com/xiedanian" class="weibo" target="_blank"><i class="iconfont icon-weiBo"></i></a>
-            <a href="" class="weixin"> <i class="iconfont icon-weixin" target="_blank"></i></a>
+            <a href="javascript:void(0)" class="weixin"> <i class="iconfont icon-weixin" target="_blank"></i></a>
             <a href="https://github.com/xiedanian" class="github" target="_blank"><i class="iconfont icon-Git"></i></a>
         </p>
     </div>
