相册详情页畅言sid更换

--- a/application/views/travel/detail.html
+++ b/application/views/travel/detail.html
@@ -17,7 +17,7 @@
 </section>
 
 <div class="changyan">
-    <div id="SOHUCS" sid="{%$tpl.data.albumInfo.id%}"></div>
+    <div id="SOHUCS" sid="{%$tpl.data.albumInfo.album_id%}"></div>
 </div>
 <script type="text/javascript">
     (function(){
